[package]
name = "rtrs"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
cfg-if = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"

wgpu = { version = "0.18", features = ["webgl"]}

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"

web-sys = { version = "0.3", features = [
    "Document",
"Window",
    "Element",
]}

[lib]
name = "rtrs"
path = "src/lib/mod.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "demo"
path = "src/bin/demo.rs"