[package]
name = "rtrs"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29.15"
log = "0.4"
wgpu = "0.19.3"
cfg-if = "1.0"
pollster = "0.3"
anyhow = "1.0.81"
bytemuck = { version = "1.4", features = ["derive" ] }
once_cell = "1.19.0"
chrono = "0.4.35"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wgpu = { version = "0.19.3", features = ["webgpu"]}
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
chrono = { version = "0.4.35", features = ["wasm-bindgen"] }
poll-promise = { version = "0.3.0", features = ["web"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCollection",
    "HtmlCanvasElement",
]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
pollster = "0.3.0"

[lib]
name = "rtrs"
path = "src/lib/mod.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "demo"
path = "src/bin/demo.rs"